--- a/GridChallenges/Challenge1.html
+++ b/GridChallenges/Challenge1.html
@@ -36,11 +36,11 @@
                               Grid Challenges
                           </a>
                           <ul class="dropdown-menu">
-                              <li><a class="dropdown-item active" aria-current="page" href="#">Grid Challenge 1</a>
+                              <li><a class="dropdown-item active" aria-current="page" href="Challenge1.html">Grid Challenge 1</a>
                               </li>
-                              <li><a class="dropdown-item" href="challenge2.html">Grid Challenge 2</a>
+                              <li><a class="dropdown-item" href="Challenge2.html">Grid Challenge 2</a>
                               </li>
-                              <li><a class="dropdown-item" href="challenge3.html">Grid Challenge 3</a>
+                              <li><a class="dropdown-item" href="Challenge3.html">Grid Challenge 3</a>
                               </li>
                           </ul>
                       </li>
