--- a/SubPages/Carousel.html
+++ b/SubPages/Carousel.html
@@ -29,7 +29,7 @@
                 <a class="nav-link"  href="cards.html">Cards</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Carousel</a>
+                <a class="nav-link active" aria-current="page" href="../SubPages/Carousel.html">Carousel</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
