--- a/GridChallenges/Challenge1.html
+++ b/GridChallenges/Challenge1.html
@@ -28,7 +28,7 @@
                           <a class="nav-link" href="../subPages/cards.html">Cards</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="../subPages/carousel.html">Carousel</a>
+                          <a class="nav-link" href="../subPages/Carousel.html">Carousel</a>
                       </li>
                       <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
